Fixed css alignment of countdown timer for discounts

--- a/demo_files/includes/css/jquery.countdown.css
+++ b/demo_files/includes/css/jquery.countdown.css
@@ -1,5 +1,5 @@
 /* jQuery Countdown styles 1.5.9. */
-.countdown_wrap {width:180px; height:35px; padding:3px; float:right;}
+.countdown_wrap {width:200px; height:35px; padding:3px; float:right;}
 .countdown_row {clear:both; width:100%; padding:0px 2px; text-align:center;}
 .countdown_show1 .countdown_section {width:98%;}
 .countdown_show2 .countdown_section {width:48%;}
